--- a/src/pages/Event.html
+++ b/src/pages/Event.html
@@ -7,7 +7,7 @@
         <meta name="description" content="kain textile dari PT Innagroup Textile Manufacture adalah kain berwarna berkualitas tinggi yang cocok untuk pakaian dan tekstil rumah tangga. Lihat galeri kami untuk berbagai pilihan warna dan kualitas.">
         <meta name="keywords" content="Dyed Fabric, PT Innagroup Textile Manufacture, kain berwarna, tekstil, kain polyester, kain berkualitas">
         <title>Event</title>
-        <link href="../../dist/output.css" rel="stylesheet" />
+        <link href="../output.css" rel="stylesheet" />
         <link
             rel="shortcut icon"
             href="../asset/favicon.ico"
