--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
         <meta name="description" content="kain textile dari PT Innagroup Textile Manufacture adalah kain berwarna berkualitas tinggi yang cocok untuk pakaian dan tekstil rumah tangga. Lihat galeri kami untuk berbagai pilihan warna dan kualitas.">
         <meta name="keywords" content="Dyed Fabric, PT Innagroup Textile Manufacture, kain berwarna, tekstil, kain polyester, kain berkualitas">
         <title>INTIM</title>
-        <link href="dist/output.css" rel="stylesheet" />
+       <script src="https://cdn.tailwindcss.com"></script>
         <link
             rel="shortcut icon"
             href="../asset/favicon.ico"
@@ -635,6 +635,6 @@
             </div>
             <!-- End Grid -->
         </footer>
-        <script src="../node_modules/preline/dist/preline.js"></script>
+        <script src="node_modules/preline/dist/preline.js"></script>
     </body>
 </html>
